fixed spacing

--- a/ear-health-project-ui/src/components/CommentCard/CommentCard.css
+++ b/ear-health-project-ui/src/components/CommentCard/CommentCard.css
@@ -23,6 +23,7 @@
   font-size: 20px;
   margin-bottom: 20px;
   margin-right: 20px;
+  margin-top: 15px;
 }
 
 #text{
